--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,91 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init()\n",
+    "\n",
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession\n",
+    "spark=SparkSession.builder.appName(\"MyFirstCSV\").getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " df=spark.read.csv(\"./Data/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- _c0: string (nullable = true)\n",
+      " |-- _c1: string (nullable = true)\n",
+      " |-- _c2: string (nullable = true)\n",
+      " |-- _c3: string (nullable = true)\n",
+      " |-- _c4: string (nullable = true)\n",
+      " |-- _c5: string (nullable = true)\n",
+      " |-- _c6: string (nullable = true)\n",
+      " |-- _c7: string (nullable = true)\n",
+      " |-- _c8: string (nullable = true)\n",
+      " |-- _c9: string (nullable = true)\n",
+      " |-- _c10: string (nullable = true)\n",
+      " |-- _c11: string (nullable = true)\n",
+      " |-- _c12: string (nullable = true)\n",
+      " |-- _c13: string (nullable = true)\n",
+      " |-- _c14: string (nullable = true)\n",
+      " |-- _c15: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
