--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,61 +1,88 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create the Spark Session Object"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import findspark\n",
-    "findspark.init()\n",
-    "\n",
-    "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
-    "spark=SparkSession.builder.appName(\"MyFirstCSV\").getOrCreate()"
+    "spark=SparkSession.builder.appName('log_reg').getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read the dataset "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    " df=spark.read.csv(\"./Data/test.csv\")"
+    " df=spark.read.csv('./Data/Log_Reg_dataset.csv',inferSchema=True,\n",
+    "header=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(20000, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The shape of the dataset \n",
+    "print((df.count(), len(df.columns)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "root\n",
-      " |-- _c0: string (nullable = true)\n",
-      " |-- _c1: string (nullable = true)\n",
-      " |-- _c2: string (nullable = true)\n",
-      " |-- _c3: string (nullable = true)\n",
-      " |-- _c4: string (nullable = true)\n",
-      " |-- _c5: string (nullable = true)\n",
-      " |-- _c6: string (nullable = true)\n",
-      " |-- _c7: string (nullable = true)\n",
-      " |-- _c8: string (nullable = true)\n",
-      " |-- _c9: string (nullable = true)\n",
-      " |-- _c10: string (nullable = true)\n",
-      " |-- _c11: string (nullable = true)\n",
-      " |-- _c12: string (nullable = true)\n",
-      " |-- _c13: string (nullable = true)\n",
-      " |-- _c14: string (nullable = true)\n",
-      " |-- _c15: string (nullable = true)\n",
+      " |-- Country: string (nullable = true)\n",
+      " |-- Age: integer (nullable = true)\n",
+      " |-- Repeat_Visitor: integer (nullable = true)\n",
+      " |-- Platform: string (nullable = true)\n",
+      " |-- Web_pages_viewed: integer (nullable = true)\n",
+      " |-- Status: integer (nullable = true)\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# Check the datatypes \n",
     "df.printSchema()"
    ]
   },
