Finition de l'exemple

--- a/Spark Example .ipynb
+++ b/Spark Example .ipynb
@@ -475,7 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14910\n"
+      "14895\n"
      ]
     }
    ],
@@ -496,8 +496,8 @@
       "+------+-----+\n",
       "|Status|count|\n",
       "+------+-----+\n",
-      "|     1| 7438|\n",
-      "|     0| 7472|\n",
+      "|     1| 7457|\n",
+      "|     0| 7438|\n",
       "+------+-----+\n",
       "\n"
      ]
@@ -509,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5090\n"
+      "5105\n"
      ]
     }
    ],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +536,8 @@
       "+------+-----+\n",
       "|Status|count|\n",
       "+------+-----+\n",
-      "|     1| 2562|\n",
-      "|     0| 2528|\n",
+      "|     1| 2543|\n",
+      "|     0| 2562|\n",
       "+------+-----+\n",
       "\n"
      ]
@@ -545,6 +545,217 @@
    ],
    "source": [
     " test_df.groupBy('Status').count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build and train the model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.classification import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg=LogisticRegression(labelCol='Status').fit(training_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_results=log_reg.evaluate(training_df).predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----------+----------------------------------------+\n",
+      "|Status|prediction|probability                             |\n",
+      "+------+----------+----------------------------------------+\n",
+      "|1     |1.0       |[0.2540780514504137,0.7459219485495864] |\n",
+      "|1     |1.0       |[0.13802880928765998,0.8619711907123401]|\n",
+      "|1     |1.0       |[0.07000976293178146,0.9299902370682186]|\n",
+      "|1     |1.0       |[0.07000976293178146,0.9299902370682186]|\n",
+      "|1     |1.0       |[0.07000976293178146,0.9299902370682186]|\n",
+      "|1     |1.0       |[0.07000976293178146,0.9299902370682186]|\n",
+      "|1     |1.0       |[0.07000976293178146,0.9299902370682186]|\n",
+      "|1     |1.0       |[0.03418057622497152,0.9658194237750285]|\n",
+      "|1     |1.0       |[0.03418057622497152,0.9658194237750285]|\n",
+      "|1     |1.0       |[0.03418057622497152,0.9658194237750285]|\n",
+      "+------+----------+----------------------------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_results.filter(train_results['Status']==1).filter(train_results['prediction']==1).select(['Status','prediction','probability']).show(10,False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- features: vector (nullable = true)\n",
+      " |-- Status: integer (nullable = true)\n",
+      " |-- rawPrediction: vector (nullable = true)\n",
+      " |-- probability: vector (nullable = true)\n",
+      " |-- prediction: double (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "results=log_reg.evaluate(test_df).predictions\n",
+    "results.printSchema()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----------+\n",
+      "|Status|prediction|\n",
+      "+------+----------+\n",
+      "|0     |0.0       |\n",
+      "|0     |0.0       |\n",
+      "|0     |0.0       |\n",
+      "|1     |0.0       |\n",
+      "|1     |1.0       |\n",
+      "|1     |1.0       |\n",
+      "|1     |1.0       |\n",
+      "|1     |1.0       |\n",
+      "|1     |1.0       |\n",
+      "|1     |1.0       |\n",
+      "+------+----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    " results.select(['Status','prediction']).show(10,False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Confusion matrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tp = results[(results.Status == 1) & (results.prediction== 1)].count()\n",
+    "tn = results[(results.Status == 0) & (results.prediction== 0)].count()\n",
+    "fp = results[(results.Status == 0) & (results.prediction== 1)].count()\n",
+    "fn = results[(results.Status == 1) & (results.prediction== 0)].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2377\n",
+      "2400\n",
+      "162\n",
+      "166\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tp)\n",
+    "print(tn)\n",
+    "print(fp)\n",
+    "print(fn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy=float((tp+tn) /(results.count()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9357492654260529\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recall "
    ]
   },
   {
