Update Spark Example .ipynb

--- a/Spark Example .ipynb
+++ b/Spark Example .ipynb
@@ -760,6 +760,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision = float(tp) / (tp +fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9361953525009846\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
