--- a/Recommender system .ipynb
+++ b/Recommender system .ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,15 +116,15 @@
       "|userId|count|\n",
       "+------+-----+\n",
       "|732   |20   |\n",
-      "|631   |20   |\n",
-      "|572   |20   |\n",
-      "|685   |20   |\n",
-      "|93    |20   |\n",
-      "|926   |20   |\n",
       "|636   |20   |\n",
+      "|572   |20   |\n",
+      "|93    |20   |\n",
+      "|685   |20   |\n",
+      "|631   |20   |\n",
       "|596   |20   |\n",
-      "|300   |20   |\n",
       "|34    |20   |\n",
+      "|300   |20   |\n",
+      "|926   |20   |\n",
       "+------+-----+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "75065"
+       "75093"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24935"
+       "24907"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,6 +328,213 @@
    "metadata": {},
    "source": [
     "## Build and Train "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.recommendation import ALS\n",
+    "rec=ALS(maxIter=10,regParam=0.01,userCol='userId',itemCol='title_new',ratingCol='rating',nonnegative=True,coldStartStrategy=\"drop\")\n",
+    "#  nonnegative =‘True’ doesn’t create negative ratings \n",
+    "#  coldStartStrategy=‘drop’ to prevent any NaN ratings \n",
+    "rec_model=rec.fit(train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction on test data \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_ratings=rec_model.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- userId: integer (nullable = true)\n",
+      " |-- title: string (nullable = true)\n",
+      " |-- rating: integer (nullable = true)\n",
+      " |-- title_new: double (nullable = false)\n",
+      " |-- prediction: float (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_ratings.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+--------------------+------+---------+----------+\n",
+      "|userId|               title|rating|title_new|prediction|\n",
+      "+------+--------------------+------+---------+----------+\n",
+      "|   141|River Wild, The (...|     4|    213.0| 3.9563932|\n",
+      "|   311|Blues Brothers, T...|     3|     64.0|  4.284288|\n",
+      "|   328| M. Butterfly (1993)|     2|    967.0| 1.3779681|\n",
+      "|    90| Pulp Fiction (1994)|     5|     12.0| 3.6245391|\n",
+      "|   562|Butch Cassidy and...|     4|    101.0| 3.8343136|\n",
+      "|   450|Bye Bye, Love (1995)|     4|   1005.0|  4.301024|\n",
+      "|   936|Joe's Apartment (...|     1|    643.0| 2.8558931|\n",
+      "|    87|Blues Brothers, T...|     5|     64.0| 4.6309505|\n",
+      "|   311|Don Juan DeMarco ...|     4|    435.0| 2.8511434|\n",
+      "|   721|          187 (1997)|     3|    684.0| 3.8394866|\n",
+      "+------+--------------------+------+---------+----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_ratings.orderBy(rand()).show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluatiuon metrics \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "\n",
+    "evaluator=RegressionEvaluator(metricName='rmse',predictionCol='prediction',labelCol='rating')\n",
+    "rmse=evaluator.evaluate(predicted_ratings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0219132500803982\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recommend Top fils that users might like "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1664"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_movies=indexed.select('title_new').distinct()\n",
+    "unique_movies.count()\n",
+    "# we have 1664 distinct movies "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " a = unique_movies.alias('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select a user for which we want to recommend other movies \n",
+    "user_id=85"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  filter the movies that this active user has already rated or seen\n",
+    "watched_movies=indexed.filter(indexed['userId'] ==user_id).select('title_new').distinct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "watched_movies.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=watched_movies.alias('b')\n"
    ]
   },
   {
