Add comments to the code for a better experience

--- a/Recommender system .ipynb
+++ b/Recommender system .ipynb
@@ -13,6 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import sparksession \n",
+    "# Creat new spark session object to use spark \n",
+    "\n",
     "from pyspark.sql import SparkSession\n",
     "spark=SparkSession.builder.appName('lin_reg').getOrCreate()"
    ]
@@ -30,6 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load and read the dataset within spark using a dataframe \n",
+    "\n",
     "df=spark.read.csv('./Data/movie_ratings_df.csv',inferSchema=True,header=True)"
    ]
   },
@@ -47,7 +52,9 @@
     }
    ],
    "source": [
-    "print((df.count(), len(df.columns)))\n"
+    "# The size of our dataset \n",
+    "\n",
+    "print((df.count(), len(df.columns)))"
    ]
   },
   {
@@ -68,7 +75,10 @@
     }
    ],
    "source": [
-    "df.printSchema()\n"
+    "# Check the datatype in case we need to change some of them \n",
+    "# We need to have user_id and Title in a numerical form, hence we will change the title type \n",
+    "\n",
+    "df.printSchema()"
    ]
   },
   {
@@ -100,7 +110,9 @@
     }
    ],
    "source": [
-    "df.groupBy('userId').count().orderBy('count',ascending=False).show(10,False) \n"
+    "# Apply some filters to the data \n",
+    "\n",
+    "df.groupBy('userId').count().orderBy('count',ascending=False).show(10,False) "
    ]
   },
   {
@@ -132,6 +144,9 @@
     }
    ],
    "source": [
+    "# Apply some filters to the data \n",
+    "# The user with the highest number of records has rated 737 movies, andeach user has rated at least 20 movies.\n",
+    "\n",
     "df.groupBy('userId').count().orderBy('count',ascending=True).show(10,False)"
    ]
   },
@@ -164,6 +179,9 @@
     }
    ],
    "source": [
+    "# Apply some filters to the data \n",
+    "# The movie with highest number of ratings is Star Wars (1977) and has been rated 583 times, and each movie has been rated by at least by 1 user.\n",
+    "\n",
     "df.groupBy('title').count().orderBy('count',ascending=False).show(10,False)"
    ]
   },
@@ -180,6 +198,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert the movie title column from categorical to numerical values using StringIndexer. \n",
+    "# Create the stringindexer object by mentioning the input\n",
+    "\n",
+    "column and output column\n",
     "from pyspark.sql.functions import *\n",
     "from pyspark.ml.feature import StringIndexer,IndexToString\n",
     "\n",
@@ -280,6 +302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#split it into a 75 to 25 ratio to train the model and test its accuracy\n",
+    "\n",
     "train,test=indexed.randomSplit([0.75,0.25])"
    ]
   },
@@ -336,10 +360,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import the ALS function from the PySpark ml library and build the model on the training dataset\n",
+    "\n",
     "from pyspark.ml.recommendation import ALS\n",
     "rec=ALS(maxIter=10,regParam=0.01,userCol='userId',itemCol='title_new',ratingCol='rating',nonnegative=True,coldStartStrategy=\"drop\")\n",
+    "\n",
     "#  nonnegative =‘True’ doesn’t create negative ratings \n",
     "#  coldStartStrategy=‘drop’ to prevent any NaN ratings \n",
+    "\n",
     "rec_model=rec.fit(train)"
    ]
   },
@@ -356,6 +384,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We use the transform function to make predictions on the test data and RegressionEvaluate to check the RMSE value of the model on test data.\n",
+    "\n",
     "predicted_ratings=rec_model.transform(test)"
    ]
   },
@@ -427,7 +457,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "# Check the performance of themodel on unseen or test data\n",
+    "\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
     "\n",
     "evaluator=RegressionEvaluator(metricName='rmse',predictionCol='prediction',labelCol='rating')\n",
     "rmse=evaluator.evaluate(predicted_ratings)\n"
@@ -662,6 +694,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make the predictions on this remaining movie’s dataset for the active user using the recommender model that we built \n",
+    "\n",
     "recommendations=rec_model.transform(remaining_movies).orderBy('prediction',ascending=False)"
    ]
   },
